<resources>
    <string name="app_name">EOSWallet</string>
    <string name="create_id">创建身份</string>
    <string name="import_id">导入身份</string>
    <string name="welcome_tip1">要从其他平台导入和使用钱包，请阅读规则。</string>
    <string name="welcome_tip2"><u>如何导入钱包？</u></string>
    <string name="create_identity_tip1">免费创建</string>
    <string name="create_identity_tip2">付费创建</string>
    <string name="dialog_service_1">使用条款</string>
    <string name="dialog_service_2">ImToken服务协议</string>
    <string name="dialog_service_3">继续</string>
    <string name="dialog_service_4">本人已仔细阅读并同意上述条款及Cookies的使用说明</string>
    <string name="create_free">免费创建</string>
    <string name="create_free_1">每日免费钱包上限10个名额 ！</string>
    <string name="account">账户名</string>
    <string name="create_free_2">妥善保管您的账户信息 ,请阅读规则。</string>
    <string name="create_free_3"><u>如何保存账户信息？</u></string>
    <string name="create">创建</string>
    <string name="create_pay">展开二维码</string>
    <string name="create_pay_1">-----------</string>
    <string name="create_pay_2">付费创建</string>
    <string name="create_pay_3">分享二维码给好友，协助注册</string>
    <string name="create_pay_4">1.填写EOS账户名，分享二维码至好友；\n2.好友扫码支付EOS，完成EOS账户注册。</string>
    <string name="create_pay_5">联系客服，协助注册</string>
    <string name="create_pay_6">1.阅读<font color="#473C8B">注册指南</font>；\n2.提交工单，联系GameToken 客服协助注册。</string>
    <string name="collection_code">收款码</string>
    <string name="copy_collection_code">复制收款地址</string>
    <string name="share">分享至</string>
    <string name="share_wechat">微信好友</string>
    <string name="share_moment">朋友圈</string>
    <string name="share_sina">微博</string>
    <string name="share_qzone">QQ空间</string>
    <string name="import_eos_wallet">导入EOS钱包</string>
    <string name="import_eos_wallet_tip">输入Private key 文件内容至输入框。或通过扫描Private key 内容生成二维码录入。请留意字符大小写。</string>
    <string name="import_eos_wallet_tip2">请输入明文私钥</string>
    <string name="passward">密码</string>
    <string name="confirm_passward">确认密码</string>
    <string name="passward_tip">密码提示信息</string>
    <string name="password_hint">请输入密码提示信息(可不填)</string>
    <string name="import_eos_tip3">密码用于加密保护私钥，以及转账、调用合约等，所以强度非常重要。\nGameToken不存储密码，也无法帮您找回，请务必 牢记。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hardworking">正在开发中...</string>
    <string name="business404">程序员们都在努力工作\n我们很快就会见面!</string>
    <string name="business">交易</string>
    <string name="property_1">兑换</string>
    <string name="property_2">货币列表</string>
    <string name="my_wallet">我的钱包</string>
    <string name="discovery">发现</string>
    <string name="discovery_game_1">你不能错过的游戏</string>
    <string name="discovery_game_2">本周新游</string>
    <string name="subscribe_email">订阅邮件</string>
    <string name="mine_1">功能列表</string>
    <string name="setting">使用设置</string>
    <string name="setting_2">可以根据您的喜好设置</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="setting_3">提供质量帮助和用户反馈</string>
    <string name="agreement">用户协议</string>
    <string name="setting_4">检查用户协议相关细节</string>
    <string name="about_us">关于我们</string>
    <string name="setting_5">了解我们的旅程</string>
    <string name="my_recommand">我的推荐</string>
    <string name="import_wallet">导入的钱包</string>
    <string name="wallet_message_1">资源管理</string>
    <string name="wallet_message_2">导出私钥</string>
    <string name="delete_wallet">删除钱包</string>
    <string name="get">获取</string>
    <string name="discovery_game_3">热门分类</string>
    <string name="game_recommand">游戏推荐</string>
    <string name="money">余额</string>
    <string name="redeem">赎回</string>
    <string name="memory">内存</string>
    <string name="use_memory">可用内存</string>
    <string name="recource_1">为什么需要购买资源</string>
    <string name="current_price">当前价格</string>
    <string name="buy_in">买入</string>
    <string name="sell_out">卖出</string>
    <string name="buy_num">购买数量</string>
    <string name="memory_1">输入EOS数量</string>
    <string name="memory_2">支持给其他账户购买内存</string>
    <string name="total_property">总资产(EOS)</string>
    <string name="receive_num">接受账户</string>
    <string name="memory_3">请输入密码提示信息(可不填)</string>
    <string name="boardband">宽带</string>
    <string name="use_cpu">可用CPU</string>
    <string name="use_net">可用NET</string>
    <string name="mortgage">抵押</string>
    <string name="can_use">可用</string>
    <string name="mortgage_num">抵押数量</string>
    <string name="mortgage_hint">输入内存数量</string>
    <string name="mortgage_ratio">抵押比例</string>
    <string name="redeem_tip">提示：可赎回的资源=总量-已用资源-赎回操作需消耗的资源-由他人抵押不可赎回的资源。</string>
    <string name="redeem_2">赎回NET数量</string>
    <string name="redeem_hint">输入NET数量</string>
    <string name="receive_account">接受账户</string>
    <string name="redeem_hint2">请输入账号</string>
    <string name="role">角色</string>
    <string name="public_key">公钥</string>
    <string name="private_key">私钥</string>
    <string name="select_wallet_type">选择钱包类型</string>
    <string name="exchange">兑换</string>
    <string name="exchange_type">兑换类型</string>
    <string name="exchange_record">兑换记录</string>
    <string name="manage">管理</string>
    <string name="property_add_search">输入 Token 名称或合约地址</string>
    <string name="mine_property">我的资产</string>
    <string name="collection">收款</string>
    <string name="transfer">转账</string>
    <string name="transfer_1">EOS转账</string>
    <string name="input_num">请输入数量</string>
    <string name="collection_address">收款地址</string>
    <string name="address">地址</string>
    <string name="remarks">备注</string>
    <string name="selection">选填</string>
    <string name="miner_cost">矿工费用</string>
    <string name="next">下一步</string>
    <string name="pay_details">支付详情</string>
    <string name="support_message">支持信息</string>
    <string name="pay_address">付款地址</string>
    <string name="enter_password">请输入密码</string>
    <string name="forget_password"><u>忘记密码?</u></string>
    <string name="confirm">确认</string>
    <string name="game_title2">区块链大数据游戏</string>
    <string name="game_title">游戏</string>
    <string name="url_error">请求链接不存在~</string>
    <string name="socket_time_out">请求超时，请稍候重试</string>
    <string name="socket_exception">网络异常，请检查后重试~</string>
    <string name="error_parse">数据解析异常,请稍后重试.</string>
    <string name="enter_game">进入游戏</string>
    <string name="receive_account_2">接受账户：</string>
    <string name="remarks2">备注：</string>
    <string name="create_identity_tip3">密码用于加密保护私钥，以及转账、调用合约等，所 以强度非常重要。\nimToken 不存储密码，也无法帮您找回，请务必牢记</string>
    <string name="identity_name">身份名字</string>
    <string name="my_identity">我的身份</string>
    <string name="head_tv">头像</string>
    <string name="id_card">身份证</string>
    <string name="id_card2">身份ID</string>
    <string name="subscribe">订阅</string>
    <string name="email">邮箱</string>
    <string name="back_up_identity">备用身份</string>
    <string name="logout_identity">退出当前身份</string>
    <string name="private_mode">隐私模式</string>
    <string name="private_mode_tip">开启隐私模式后的资产和金额将会被隐藏</string>
    <string name="language">多语言</string>
    <string name="money_type">货币单位</string>
    <string name="node_setting">节点设置</string>
    <string name="use_setting">使用设置</string>
    <string name="save">保存</string>
    <string name="add_define_node">添加自定义节点</string>
    <string name="normal_question">常见问题</string>
    <string name="classify_question">问题分类</string>
    <string name="token_agreement">im Token服务协议</string>
    <string name="terms_service">服务条款</string>
    <string name="version_daily">版本日志</string>
    <string name="version_update">版本更新</string>
    <string name="set_secret">设置密码</string>
    <string name="complete">完成</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="please_confirm_password">请确认密码</string>
    <string name="password_difference">两次密码不一致</string>
    <string name="please_enter_account">请输入账号</string>
    <string name="please_enter_ownerkey">请输入owner key</string>
    <string name="please_enter_activerkey">请输入activer key</string>
    <string name="create_error">\"未能成功创建，请重试~\"</string>
    <string name="please_enter_private_key">请输入明文私钥</string>
    <string name="import_wallet_error">导入钱包失败</string>
    <string name="scan">扫一扫</string>
    <string name="please_open_camera_permission">请开启相机权限</string>
    <string name="copy_success">复制成功</string>
    <string name="the_newest_version">已经是最新版本</string>
    <string name="please_enter_search">请输入搜索内容</string>
    <string name="please_enter_identity">请输入身份名字</string>
    <string name="identity_fail">身份注册失败</string>
    <string name="backup_fail">备份失败</string>
    <string name="backup_success">备份成功</string>
    <string name="please_enter_right_acount">请输入正确的账户名</string>
    <string name="account_hint">12位字符，首字母必须是字母</string>
    <string name="please_enter_address">请输入地址</string>
    <string name="over_balance">超出余额</string>

</resources>
