<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.eos.ui.fragment.BuyInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="13dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buy_num"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="余额：40.62KB"
                android:textColor="#A1A9B9"
                android:textSize="14sp" />
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/memory_1"
            android:textColor="@color/black"
            android:textColorHint="#C5C4C4"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="13dp"
            android:layout_marginTop="8dp"
            android:background="#EBEBEB" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="30dp"
            android:text="@string/receive_num"
            android:textColor="#333333"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/memory_3"
            android:textColor="@color/black"
            android:textColorHint="#C5C4C4"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="13dp"
            android:layout_marginTop="8dp"
            android:background="#EBEBEB" />

    </LinearLayout>

</ScrollView>
