<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.eos.ui.activity.TransferActivity">

    <include layout="@layout/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:text="ETH"
        android:textColor="#333333"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:hint="@string/input_num"
        android:textColorHint="#C5C4C4"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="8dp"
        android:background="#EBEBEB" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="8dp"
        android:text="余额：0 ETH"
        android:textColor="#323E86"
        android:textSize="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="26dp"
        android:text="@string/collection_address"
        android:textColor="#333333"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_num"
            android:textColorHint="#C5C4C4"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="26dp"
            android:background="@drawable/rectangle_radius20_blue"
            android:orientation="horizontal"
            android:paddingHorizontal="9dp"
            android:paddingVertical="5dp">

            <ImageView
                android:layout_width="11dp"
                android:layout_height="11dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/address_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/address"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="8dp"
        android:background="#EBEBEB" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="26dp"
            android:text="@string/remarks"
            android:textColor="#333333"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/selection"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="8dp"
        android:background="#EBEBEB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_weight="1"
            android:text="@string/miner_cost"
            android:textColor="#333333"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="26dp"
            android:text="0.009 BTC"
            android:textColor="#323E86"
            android:textSize="12sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="8dp"
        android:background="#EBEBEB" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="49dp"
        android:background="@mipmap/rectangle_green_bg"
        android:paddingBottom="5dp"
        android:text="@string/next"
        android:textColor="@color/white" />


</LinearLayout>
