<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.eos.ui.activity.MyIdentityActivity">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/rectangle_radius10_white"
        android:elevation="8dp"
        android:orientation="vertical">

        <!--头像-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="13dp"
                android:text="@string/head_tv"
                android:textColor="@color/color_333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/avatar_iv"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:src="@mipmap/default_avatar" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginHorizontal="14dp"
            android:background="#EBEBEB" />

        <!--身份证-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="13dp"
                android:text="@string/id_card"
                android:textColor="@color/color_333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/idcard_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:gravity="end"
                android:src="@mipmap/default_avatar"
                android:textColor="#666666"
                android:textSize="13sp"
                tools:text="MAC李先生" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginHorizontal="14dp"
            android:background="#EBEBEB" />

        <!--身份id-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="13dp"
                android:text="@string/id_card2"
                android:textColor="@color/color_333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/identity_id_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:gravity="end"
                android:src="@mipmap/default_avatar"
                android:textColor="#666666"
                android:textSize="13sp"
                tools:text="ndkjshndasdwoi26\n456dsa654ds4da" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginHorizontal="14dp"
            android:background="#EBEBEB" />

        <!--邮箱-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="13dp"
                android:text="@string/email"
                android:textColor="@color/color_333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="53dp"
                android:layout_height="21dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/rectangle_radius10_blue"
                android:gravity="center"
                android:text="@string/subscribe"
                android:textColor="@color/white"
                android:textSize="11sp" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/backup_btn"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@mipmap/rectangle_green_bg2"
        android:paddingBottom="5dp"
        android:text="@string/back_up_identity"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@mipmap/rectangle_red_bg"
        android:paddingBottom="5dp"
        android:text="@string/logout_identity"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>
