<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context="com.android.eos.ui.fragment.RedeemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rectangle_radius13_gray"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            android:paddingVertical="17dp">

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:src="@mipmap/warning" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/redeem_tip"
                android:textColor="#A1A9B9"
                android:textSize="12sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="13dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/redeem_2"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="余额：46879 bytes"
                android:textColor="#A1A9B9"
                android:textSize="14sp" />
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/redeem_hint"
            android:textColor="@color/black"
            android:textColorHint="#C5C4C4"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="13dp"
            android:layout_marginTop="8dp"
            android:background="#EBEBEB" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="13dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receive_account"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="余额：46879 bytes"
                android:textColor="#A1A9B9"
                android:textSize="14sp" />
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/redeem_hint2"
            android:textColor="@color/black"
            android:textColorHint="#C5C4C4"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="13dp"
            android:layout_marginTop="8dp"
            android:background="#EBEBEB" />

    </LinearLayout>

</ScrollView>
